Revision history for {{$dist->name}}

{{$NEXT}}
- Make it work under Perl < 5.24 again (no postderef)
- Add init_file option to recreate the underlying file at object construction.

0.010     2020-02-26 21:45:37+11:00 Australia/Melbourne
- Change to using SQLite for the backing store, fixing the situation where
  metrics could be lost if there were lots of them. Minor change to the
  constructor parameters, please check the docs.

0.002     2019-12-22 13:08:58+11:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.004 internals changes, including timestamp and
  histogram support

0.001     2018-07-27 23:25:50+10:00 Australia/Melbourne